<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:id="@+id/showUserName"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/username"
    android:textColor="@android:color/widget_edittext_dark"
    android:textSize="24sp"
    android:layout_alignParentStart="true"
    android:layout_alignParentTop="true"
    />


<TextView
    android:id="@+id/showPhoneNumber"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/phone_number"
    android:textColor="@android:color/widget_edittext_dark"
    android:textSize="24sp"
    android:layout_alignParentStart="true"
    android:layout_below="@id/showUserName"
    android:autoLink="phone"/>

    <CheckBox
        android:id="@+id/emailCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/showPhoneNumber"
        android:onClick="showEmail"/>

    <TextView
        android:id="@+id/showEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="24sp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/emailCheckBox"
        android:autoLink="email"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/emptyLine"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text=""
        android:layout_below="@id/emailCheckBox"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emptyLine"
        android:layout_toStartOf="@id/button"
        android:onClick="goToEditActivity"
        android:textSize="18sp"
        android:textColor="@android:color/widget_edittext_dark"
        android:text="@string/edit" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/home"
        android:onClick="backToMainActivity"
        android:textColor="@android:color/widget_edittext_dark"
        android:textSize="18sp"
        android:layout_alignParentEnd="true"
        android:layout_alignEnd="@id/showPhoneNumber"
        android:layout_below="@+id/emptyLine"/>
</RelativeLayout>